Fix typo :pencil2:

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
             <br>in your hands
           </h2>
           <p class="header-description-paragraph">
-            Speak directly to all your employees and involve them through conversations, gamings and quizzes.
-            Allow your managers with internal rates of campaign absorption, identification of influencers, and sentiment analysis.
+            Speak directly to all your employees and involve them through conversations, gamification and quizzes.
+            Empower your managers with internal rates of internal campaign adherence, identification of influencers, and sentiment analysis.
           </p>
           <div class="header-wanna-try-btn-col">
             
