Fix typo :pencil2:

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <div class="row">
         <div class="col-md-7 col-md-offset-1 col-sm-11 col-xs-12">
           <h2 class="header-description-heading">
-            End to end communication
+            End-to-end communication
             <br>in your hands
           </h2>
           <p class="header-description-paragraph">
